<resources>
    <string name="app_name">Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Menu-->
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_library">Library</string>
    <string name="menu_profile">Profile</string>
    <string name="home_title">Music</string>
    <string name="btn_all">All</string>
    <string name="btn_album">Album</string>

    <!--    album-->
    <string name="album1_title">VannDa - Mix</string>
    <string name="album1_artist">Cambodian Artist</string>

    <string name="album2_title">Suly Pheng</string>
    <string name="album2_artist">Singer</string>

    <string name="album3_title">Justin Bieber</string>
    <string name="album3_artist">Pop Star</string>

    <string name="album4_title">ROSÉ - Mix</string>
    <string name="album4_artist">K-pop Star</string>

    <string name="album5_title">Tena - Mix</string>
    <string name="album5_artist">Cambodian Artist</string>

    <string name="album6_title">Billie Eilish</string>
    <string name="album6_artist">Pop Star</string>

    <string name="album_cover">Album Cover</string>
    <string name="artist_name">Vanda</string>
    <string name="album_title">Time To Rise</string>


    <string name="explore_album">Explore The Album</string>

    <!-- Content Descriptions (for accessibility) -->
    <string name="desc_notification">Notification icon</string>
    <string name="desc_settings">Settings icon</string>
    <!--    song -->
    <string name="song_title">Song Title</string>
    <string name="song_artist">Artist Name</string>
    <string name="song_thumbnail">Song Thumbnail</string>
    <!--library-->

    <string name="library">Library</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--login-->
    <string name="back_button_desc">Back button</string>
    <string name="login_button_desc">Login button</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="back">Back</string>

    <!--    Register-->
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_button_desc">Sign up button</string>
<!--    profile-->
    <string name="profile_image">Profile Image</string>
    <string name="username">Gemchea</string>
    <string name="view_profile">View Profile</string>
    <string name="go">Go</string>

    <string name="version_title">Version</string>
    <string name="version_value">8.8.32.508</string>

    <string name="third_party_title">Third-party software</string>
    <string name="third_party_value">Sweet software that helped us</string>

    <string name="terms_title">Terms and conditions</string>
    <string name="terms_value">All the stuff you need to know.</string>

    <string name="privacy_title">Privacy policy</string>
    <string name="privacy_value">Important for both of us.</string>

    <string name="rules_title">Platform rules</string>
    <string name="rules_value">Help keep spotify safe for all</string>

    <string name="support_title">Support</string>
    <string name="support_value">Get help from us and the community.</string>

    <string name="log_out">Log out</string>
</resources>