<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="#1E1E1E">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/album_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/album_cover"
            android:background="@drawable/rounded_album_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/album_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/album_title"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/album_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp" />

        <TextView
            android:id="@+id/album_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/artist_name"
            android:textColor="#AAAAAA"
            android:textSize="12sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/album_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
